fix: horizontal overflow

--- a/src/FE/src/app/profiles-page/profiles-page.component.css
+++ b/src/FE/src/app/profiles-page/profiles-page.component.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 90vh;
+  width: 70vw;
   background-color: forestgreen;
   padding: 1rem;
   border-radius: 1rem;
